streamlit-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-ui
spec:
  selector:
    app: streamlit-ui
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  # node port or load balancer config??
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit-ui
  template:
    metadata:
      labels:
        app: streamlit-ui
    spec:
      containers:
      - name: streamlit-ui
        image: tejaswath/streamlit-ui:v1
        imagePullPolicy: Always
        ports:
          - containerPort: 8501
